--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
@@ -1,5 +1,57 @@
 @media (max-width: 480px) { 
 
+	.page_title{
+		margin-bottom: 1em;
+	}
+
+	.hwc-share-widget{
+		margin-top: 0;
+		margin-bottom: 0;
+		ul{
+			width: 100%;
+		}
+	}
+
+	body.page-tools-and-publications-practical-tools {
+		.view-practical-tools {
+			.view-header{
+				h2{
+
+				}
+			}
+		}
+	}
+
+	body.page-tools-and-publications-practical-tools {
+		.region.region-content {
+			.view-content {
+				.views-row {
+					padding-bottom: 3em!important;
+					.views-field-body{
+						padding-bottom: 0;
+						.more-link {
+						    right: 15px !important;						  
+						}
+					}
+				}
+			}
+
+			.view-practical-tools {
+				.view-content{ 
+					.views-row{ 
+						.conten-tags{
+							width: 100%;
+							margin-right: 0;
+							span:nth-child(2){
+								max-width: 175px;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+
 	body.front-page {
 		.main-container {
 			#block-views-homepage-banners-block {
@@ -181,7 +233,10 @@
 	}
 
 	/* Newsletter page */
-	.page-node-129{
+	body.newsletter{
+		h2.pane-title{
+			padding-top: 1em;
+		}
 		.panels-flexible-region.panels-flexible-region-new-center.panels-flexible-region-first.col-md-6{
 			.pane-osha-newsletter-osha-newsletter-subscribe-extra{
 				#subscribe-extra{
