--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -197,6 +197,14 @@
 		}
 	}
 
+	.view-news{
+		.views-row{
+			h2{
+				margin-left: 15px;
+			}
+		}
+	}
+
 	/*Splash page*/
 	.intro-splash-20 .views-row-first{
 		padding-bottom: 1em;
@@ -433,7 +441,7 @@
 				.region-sidebar-first{
 					.block.block-facetapi{
 						margin-bottom: 15px;
-						margin-top: 0;
+						margin-top: 0 !important;
 						h2{
 							background-color: transparent;
 							margin: 0;
@@ -604,7 +612,7 @@
 
 	.page-events .add-to-calendar {
 	    margin-left: 330px;
-	    margin-top: -2em;
+	    margin-top: -20px;
 	}
 
 	.node-type-events{
