--- a/docroot/sites/all/themes/hwc_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/responsive-max-767.less
@@ -1728,28 +1728,24 @@ header.navbar-default{
 }
 //detail
 .node-type-news{
-	.back-to-link{
-		display: none;
-	}
-	.node-news {
-	    padding-left: 15px;
-	    padding-right: 15px;
-	}
-	h2{
-		margin-left: 0;
-		margin-right: 0;
-		font-size: 1.45em;
-	}
-	.field-type-image {
-		margin-right: 0em;
-    	margin-bottom: 1em;
-		text-align: center;
-		img {
-			width: 100%;
-	    	display: block;
-	    	padding: 0 7em;
+	.main-container{
+		.back-to-link{
+			display: none;
 		}
-	}
+		.node-news {
+		    padding-left: 15px;
+		    padding-right: 15px;
+		}
+		h2{
+			margin-top: 0.5em;
+			margin-left: 0;
+			margin-right: 0;
+			font-size: 1.45em;
+		}
+		.field.field-name-field-summary{
+			margin-top: 0;
+		}
+	}	
 }
 /*end news*/
 
