--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4758,6 +4758,11 @@ body{
 				margin-bottom: 0;
 			}
 
+			p.more-padding{
+				padding-left: 1em;
+				padding-right: 1em;
+			}
+
 			.more-link{
 				margin-top: auto;
 				display: flex;
@@ -8674,4 +8679,30 @@ body.video-page{
 
 #sliding-popup.sliding-popup-top, #sliding-popup.sliding-popup-top .eu-cookie-withdraw-banner, .eu-cookie-withdraw-tab {
     background: url('../images/background-cookies.png') repeat;
+}
+
+/* Become a campaign partner */
+.page-node-165{
+	.field-name-title-field{
+		h2{
+			text-align: center;
+		}
+	}
+	.became-green-block{
+		background: url(../images/became-green-block.png) no-repeat;
+		background-size: cover;
+		padding: 2em 3em;
+		color:#FFF;
+		text-align: left;
+		float: none;
+		margin: 2em auto 2em;
+		border-radius: 5px;
+		a{
+			color: #003399;
+			font-weight: 400;
+			&:hover{
+				text-decoration: underline;
+			}
+		}
+	}
 }
