--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4786,7 +4786,7 @@ body{
 	float: left;
 	width: 100%;
 	height: 392px;
-	margin-top: 1em;
+	margin-top: 1.5em;
 	h3{
 		padding-bottom: 1em;
 	}
@@ -8686,12 +8686,13 @@ body.video-page{
 	.field-name-title-field{
 		h2{
 			text-align: center;
+			font-size: 3.8rem;
 		}
 	}
 	.became-green-block{
 		background: url(../images/became-green-block.png) no-repeat;
 		background-size: cover;
-		padding: 2em 3em;
+		padding: 1em;
 		color:#FFF;
 		text-align: left;
 		float: none;
