--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -454,8 +454,8 @@ select{
     display: flex;
     flex-wrap:wrap;
     justify-content: center;
-    padding-top: 2em;
-    padding-bottom: 1.6em;
+    padding-top: 1em;
+    padding-bottom: 0.6em;
 }
 
 ul.time-and-counters{
@@ -1018,6 +1018,18 @@ ul.time-and-counters{
 	   	width: 100%;
 		padding-left: 1em;
 		word-break: break-word;
+	}
+}
+
+.page-node-184{
+	.recommended-tool{
+	  	span{
+		    display: block;
+		   	width: 100%;
+			padding-left: 1em;
+			word-break: break-word;
+			text-align: left;
+		}
 	}
 }
 
@@ -4746,6 +4758,11 @@ body{
 				margin-bottom: 0;
 			}
 
+			p.more-padding{
+				padding-left: 1em;
+				padding-right: 1em;
+			}
+
 			.more-link{
 				margin-top: auto;
 				display: flex;
@@ -4769,7 +4786,7 @@ body{
 	float: left;
 	width: 100%;
 	height: 392px;
-	margin-top: 1em;
+	margin-top: 1.5em;
 	h3{
 		padding-bottom: 1em;
 	}
@@ -8662,4 +8679,31 @@ body.video-page{
 
 #sliding-popup.sliding-popup-top, #sliding-popup.sliding-popup-top .eu-cookie-withdraw-banner, .eu-cookie-withdraw-tab {
     background: url('../images/background-cookies.png') repeat;
+}
+
+/* Become a campaign partner */
+.page-node-165{
+	.field-name-title-field{
+		h2{
+			text-align: center;
+			font-size: 3.8rem;
+		}
+	}
+	.became-green-block{
+		background: url(../images/became-green-block.png) no-repeat;
+		background-size: cover;
+		padding: 1em;
+		color:#FFF;
+		text-align: left;
+		float: none;
+		margin: 2em auto 2em;
+		border-radius: 5px;
+		a{
+			color: #003399;
+			font-weight: 400;
+			&:hover{
+				text-decoration: underline;
+			}
+		}
+	}
 }
