--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -733,24 +733,24 @@
 	    text-align: center;
 	    float: left;
 	    width: 100%;
-	   	height: 736px;
+	   	height: 868px;
 
 		> div.boxes > div:nth-child(1){
 			position: absolute;
-			left: 100px;
-	    	top: 17px;
+	    	left: 72px;
+	    	top: 68px;
 		}
 
 		> div.boxes > div:nth-child(2){
 			position: absolute;
-			left: 100px;
-			top: 265px;
+			left: 72px;
+    		top: 310px;
 		}
 
 		> div.boxes > div:nth-child(3){
 			position: absolute;
-			left: 100px;
-			top: 487px;
+    		left: 71px;
+    		top: 546px;
 		}
 	}
 
@@ -762,40 +762,43 @@
 	    display: flex;
 	    flex-wrap: wrap;
 	    justify-content: center;
-	    background: url(../images/timeline-dots-vertical.png) repeat-y 39px 0;
+	    background: none;
 	    padding-top: 70px;
 	    padding-bottom: 1em;
 	    position: relative;
 	    > div {
 			float: left;
 		}
-		> div:nth-child(1), > div:nth-child(3), > div:nth-child(5){
-			background: #0030a0;
-			border-radius: 25px;
-			width: 27px;
-	    	border: 3px solid #FFF;
-		}
 
 		> div:nth-child(1){
-			    position: absolute;
-    			left: 28px;
-    			top: 70px;
+			position: absolute;
+			left: 76px;
+    		top: 37px;
+    		&:after{
+    			left: -67px;
+    			top: 92px;
+    		}
 	    }
 
 	    > div:nth-child(2){
 			position: absolute;
-	    	left: 101px;
-    		top: 193px;
+	    	left: 74px;
+    		top: 281px;
 	    	&:after{
-	    		left: -67px;
-    			top: 3px;
+	    		left: -65px;
+    			top: 101px;
 	    	}
 	    }
 
 	    > div:nth-child(3){
 			position: absolute;
-	    	left: 28px;
-	    	top: 318px;
+	    	left: 73px;
+    		top: 518px;
+    		right: initial;
+	    	&:after{
+	    		left: -64px;
+    			top: 97px;
+	    	}
 	    }
 
 	    > div:nth-child(4){
