--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4795,7 +4795,7 @@ body{
 		.box{
 			width: 197px;
 			min-height: 175px;
-			border: 2px solid #8ea64b;
+			border: 0;
 			background: #FFF;
 			height: auto;
 			padding-bottom: 1em;
@@ -4808,12 +4808,12 @@ body{
 				.btn-become-partner-download{
 					width: 100%;
 					min-height: 36px;
-					background: url(../images/timeline-button-active.png) no-repeat 93% 40%;
+					background: url(../images/timeline-button-active.png) repeat-y 93% 40%;
 					text-align: left;
 					color: #FFF;
 					padding-top: 7px;
-					padding-left: 5px;
-					padding-right: 15px;
+					padding-left: 10px;
+    				padding-right: 10px;
 					border-radius: 3px;
 					text-decoration: none;
 					display: inline-block;
@@ -4847,7 +4847,7 @@ body{
 
 		.box.inactive{
 			background: #efeff0;
-			border: 2px solid #b0b1b2;
+			border: 0;
 			h4, p{
 				color:#b0b1b2;
 			}
