--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4831,25 +4831,63 @@ body{
 				}
 
 				.btn-become-partner-register{
+					width: 100%;
+					min-height: 36px;
+					background: url(../images/timeline-button-active.png) repeat-y 93% 40%;
 					text-align: left;
-					border: 1px solid #0030a0;
-					color: #0030a0;
+					color: #FFF;
+					padding-top: 7px;
 					padding-left: 10px;
-					padding-right: 10px;
+    				padding-right: 10px;
 					border-radius: 3px;
 					text-decoration: none;
 					display: inline-block;
-    				max-width: 171px;
+					&:after{
+						content:'';
+						display: block;	
+						background: url(../images/active-next.png) no-repeat 85% 75%;
+						width: 17px;
+						height: 17px;
+						float: right;
+					}
+					&:hover{
+						opacity: 0.8;
+					}
 				}
 			}
 			
 		}
 
 		.box.inactive{
-			background: #efeff0;
+			/*background: #efeff0;*/
 			border: 0;
-			h4, p{
+			/*h4, p{
 				color:#b0b1b2;
+			}*/
+			div{
+				.btn-become-partner-register{
+					background: url(../images/timeline-button-no-active.png) repeat-y 93% 40%;					
+					width: 100%;
+					min-height: 36px;
+					text-align: left;
+					color: #b3bccc;
+					padding-top: 7px;
+					padding-left: 10px;
+					padding-right: 10px;
+					border-radius: 3px;
+					text-decoration: none;
+					display: inline-block;
+					pointer-events: none;
+					cursor: pointer;
+					&:after{
+						content:'';
+						display: block;	
+						background: url(../images/no-active-next.png) no-repeat 85% 75%;
+						width: 17px;
+						height: 17px;
+						float: right;
+					}
+				}
 			}
 		}
 
@@ -4875,7 +4913,7 @@ body{
 			font-size: 0.8em;
 			padding-left: 10px;
 			padding-right: 10px;
-			margin-bottom: 15px;
+			margin-bottom: 20px;
 			text-align: left;
 		}
 	}
