HW20-478 - UX Became a Campaign Partner changes - Mock up

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -1093,7 +1093,7 @@
 	    		left: 44px;				
 			}
 			> div:nth-child(2) {
-	   			left: 332px;
+	   			left: 38%;
 			}
 			> div:nth-child(3) {
 	    		right: 8px;
@@ -1107,7 +1107,7 @@
 	    	left: 104px;;
 		}
 		> div:nth-child(2) {
-    		left: 320px;
+    		left: 37%;
     	}
     	> div:nth-child(3) {
     		right: 89px;
@@ -1128,7 +1128,7 @@
 	    		left: 44px;				
 			}
 			> div:nth-child(2) {
-	   			left: 258px;
+	   			left: 37%;
 			}
 			> div:nth-child(3) {
 	    		right: 8px;
