--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -119,15 +119,18 @@
 				.block-views{
 					.view-view-campaign-materials{
 						.view-content{
-					    display: flex;
-					    flex-wrap: wrap;
-					    > div{
-					    	width: 50%;
-					    	border-bottom: 1px solid #CCC;
-					    	.box-before-title{
-									border: 0;
-					    	}
-					    }
+						    display: flex;
+						    flex-wrap: wrap;
+						    > div{
+						    	width: 100%;
+						    	border-bottom: 1px solid #CCC;
+						    	.box-before-title{
+										border: 0;
+						    	}
+						    }
+						    > div:nth-child(4){
+						    	border-bottom: 0;
+						    }
 						}						
 					}
 				}
