--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -124,6 +124,7 @@
 						    > div{
 						    	width: 100%;
 						    	border-bottom: 1px solid #CCC;
+						    	padding-bottom: 10px;
 						    	.box-before-title{
 										border: 0;
 						    	}
